# react-fastapi-docker

./: readme.md
backend/: .env  pyproject.toml
frontend/: pnpm-lock.yaml  vite.config.js
