[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
